Mise à jour - nettoyage des fichiers de test et compilation